Boilerplate adapted, testing basic functionality

--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -10,7 +10,7 @@
 <body>
     <div>
         <a href="/">Home</a>
-        <a href="contacts">Contacts</a>
-        <a href="add">Add</a>
-        <a href="products">Products</a>
+        <a href="book">Book</a>
+        <a href="comments">Comments</a>
+        <a href="contact">Contact</a>
       </div>
