--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -2,6 +2,9 @@
        
     </div>
 
-
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
 </body>
 </html>
