addes some basic stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,180 @@
-<% include ../partials/header %>
+<!-- <% include ../partials/header %> -->
 
-<div>
-    <h1>Home again</h1>
-</div>
+<!DOCTYPE html>
+<html>
+<title>Travel agency</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="app.css" type="text/css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<style>
 
-<%include ../partials/footer %>
+</style>
+
+<body>
+
+
+    <!-- Navigation Bar -->
+    <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
+        <a href="#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>Logo</b></a>
+        <a href="#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
+    </div>
+    <title>Travel agency</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="app.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <style>
+
+    </style>
+
+
+
+
+
+    <div class="w3-display-container" style="margin-bottom:50px">
+        <img src="dublin.jpeg" style="width:100%">
+        <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small" style="bottom:10%;opacity:0.7;width:70%">
+            <h2>Ready to travel?</h2>
+        </div>
+    </div>
+    <h1>Here are our current New Year getaway deals</h1>
+
+    <div class="w3-row w3-container" style="margin:50px 0">
+        <div class="w3-half w3-container">
+            <div class="w3-topbar w3-border-amber">
+                <img src="colosseum2.jpeg" style="width:100%">
+                <h2>Rome</h2>
+                <p id="rome1">If you want to start 2020 in style – you know the saying – all roads lead to Rome.</p>
+                <p id="show1">See more</p>
+                <p id="rome2" style="display:none">See out the old 2019 and say hello to 2019 in one of the oldest cities in the world with breath-taking views of amazing sights such as the Colosseum, the Pantheon, Roman Forum and numerous fountains around the city. Hey, while you’re there,
+                    why not visit a completely different country – it’s only a couple of metro stops away, you know? We’re talking about the Vatican, of course, where you can see St. Peter’s Basilica and the Sistine Chapel.
+                </p>
+                <p><button class="w3-button w3-black w3-padding-large" type="submit">BOOK</button></p>
+                <p id="success"></p>
+                <p id="hide1" style="display: none">See less</p>
+            </div>
+        </div>
+
+        <div class="w3-half w3-container">
+            <div class="w3-topbar w3-border-amber">
+                <img src="eiffel.jpeg" style="width:100%">
+                <h2>Paris</h2>
+                <p id="paris1">Voulez-vous voyager avec nous? The city of love (or lights, whichever works for you) is waiting for you.</p>
+                <p id="show2">See more</p>
+                <p id="paris2" style="display:none">There is no better place for couples to start 2020 than by walking down the Champs-Elysées, climbing all the way to the top of the Eiffel Tower and warm up in one of the numerous cafes in the Latin Quarter. Bonus – all the amazing museums
+                    from Louvre to Pompidou where you can really boost your general knowledge and get those culture Insta points. While there, you can take a trip to Versailles and see how the royals used to live.
+
+                </p>
+                <p id="hide2" style="display: none">See less</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="w3-row w3-container" style="margin:50px 0">
+        <div class="w3-half w3-container">
+            <div class="w3-topbar w3-border-orange">
+                <img src="hop.jpeg" style="width:100%">
+                <h2>London</h2>
+                <p id="london1">Ready for some 5 o’clock tea? Or 5 AM shot of coffee to push you to keep partying your way into the New Year?</p>
+                <p id="show3">See more</p>
+                <p id="london2" style="display:none">You might have done it before, but this might be one last massively spectacular pre-Brexit party that London is going to host. Be there an get New Year’s Eve partying done! While you’re not watching the amazing fireworks display around
+                    the London Eye and setting your watch to match the banging of Big Ben, you can roam around the city and check out some of the unmissable locations, like the Tower of London, Tower Bridge, Camden Town and Madame Tussauds. Get this trip
+                    booked! Now!
+
+                </p>
+                <p id="hide3" style="display: none">See less</p>
+            </div>
+        </div>
+
+        <div class="w3-half w3-container">
+            <div class="w3-topbar w3-border-orange">
+                <img src="redsquare.jpg" style="width:100%">
+                <h2>Moscow</h2>
+
+                <p id="moscow1">Yes, we do know it’s kind of cold in Moscow now, but you can do what the locals do in order to warm themselves up – drink loads of vodka. </p>
+                <p id="show4">See more</p>
+                <p id="moscow2" style="display:none">It’s not only vodka (or Putin) that makes Moscow special. If you’re looking for the real wintery, snowy atmosphere, where warm clothes, mittens and warm (or alcoholic drinks) will keep you going and you want to see some of the world’s
+                    most amazing architecture, this is the place for you. From Red Square and St. Basil’s Cathedral to Lenin’s Mausoleum, Moscow really offers you numerous ways to experience the culture that goes far beyond the clichés seen in American
+                    films. Bonus – Moscow is still preparing for Christmas, which is in the beginning of January per their calendar, so you get to relive Christmas time.
+
+                </p>
+                <p id="hide4" style="display: none">See less</p>
+            </div>
+        </div>
+    </div>
+    <a href="/book">Other page</a>
+
+    <script>
+        $(document).ready(function() {
+            $("#show1").click(function() {
+                $("#rome2").show();
+                $("#show1").hide();
+                $("#hide1").show();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#hide1").click(function() {
+                $("#rome2").hide();
+                $("#show1").show();
+                $("#hide1").hide();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#show2").click(function() {
+                $("#paris2").show();
+                $("#show2").hide();
+                $("#hide2").show();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#hide2").click(function() {
+                $("#paris2").hide();
+                $("#show2").show();
+                $("#hide2").hide();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#show3").click(function() {
+                $("#london2").show();
+                $("#show3").hide();
+                $("#hide3").show();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#hide3").click(function() {
+                $("#london2").hide();
+                $("#show3").show();
+                $("#hide3").hide();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#show4").click(function() {
+                $("#moscow2").show();
+                $("#show4").hide();
+                $("#hide4").show();
+            })
+        });
+
+        $(document).ready(function() {
+            $("#hide4").click(function() {
+                $("#moscow2").hide();
+                $("#show4").show();
+                $("#hide4").hide();
+            })
+        });
+    </script>
+
+</body>
+
+</html>
+
+<!-- <%include ../partials/footer %> -->
