--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,11 +31,8 @@
     </style>
 
 
-
-
-
     <div class="w3-display-container" style="margin-bottom:50px">
-        <img src="dublin.jpeg" style="width:100%">
+        <img src="/images/dublin.jpeg" style="width:100%">
         <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small" style="bottom:10%;opacity:0.7;width:70%">
             <h2>Ready to travel?</h2>
         </div>
@@ -45,7 +42,7 @@
     <div class="w3-row w3-container" style="margin:50px 0">
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-amber">
-                <img src="colosseum2.jpeg" style="width:100%">
+                <img src="/images/colosseum.jpeg" style="width:100%">
                 <h2>Rome</h2>
                 <p id="rome1">If you want to start 2020 in style – you know the saying – all roads lead to Rome.</p>
                 <p id="show1">See more</p>
@@ -60,7 +57,7 @@
 
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-amber">
-                <img src="eiffel.jpeg" style="width:100%">
+                <img src="/images/eiffel.jpeg" style="width:100%">
                 <h2>Paris</h2>
                 <p id="paris1">Voulez-vous voyager avec nous? The city of love (or lights, whichever works for you) is waiting for you.</p>
                 <p id="show2">See more</p>
@@ -76,7 +73,7 @@
     <div class="w3-row w3-container" style="margin:50px 0">
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-orange">
-                <img src="hop.jpeg" style="width:100%">
+                <img src="/images/hop.jpeg" style="width:100%">
                 <h2>London</h2>
                 <p id="london1">Ready for some 5 o’clock tea? Or 5 AM shot of coffee to push you to keep partying your way into the New Year?</p>
                 <p id="show3">See more</p>
@@ -91,7 +88,7 @@
 
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-orange">
-                <img src="redsquare.jpg" style="width:100%">
+                <img src="/images/redsquare.jpg" style="width:100%">
                 <h2>Moscow</h2>
 
                 <p id="moscow1">Yes, we do know it’s kind of cold in Moscow now, but you can do what the locals do in order to warm themselves up – drink loads of vodka. </p>
