--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,28 +2,11 @@
 
 <!DOCTYPE html>
 <html>
-<title>Travel agency</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="app.css" type="text/css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<style>
-
-</style>
-
-<body>
-
-
-    <!-- Navigation Bar -->
-    <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
-        <a href="#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>Logo</b></a>
-        <a href="#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
-    </div>
     <title>Travel agency</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <style>
@@ -31,18 +14,32 @@
     </style>
 
 
+
+<body>
+
+    
+
+    <!-- Navigation Bar -->
+    
+    <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
+        <a href="#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>Logo</b></a>
+        <a href="#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
+    </div>
+    
     <div class="w3-display-container" style="margin-bottom:50px">
-        <img src="/images/dublin.jpeg" style="width:100%">
+        <img src="/dublin.jpeg" style="width:100%">
         <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small" style="bottom:10%;opacity:0.7;width:70%">
             <h2>Ready to travel?</h2>
         </div>
     </div>
     <h1>Here are our current New Year getaway deals</h1>
 
+    
+
     <div class="w3-row w3-container" style="margin:50px 0">
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-amber">
-                <img src="/images/colosseum.jpeg" style="width:100%">
+                <img src="/colosseum.jpeg" style="width:100%">
                 <h2>Rome</h2>
                 <p id="rome1">If you want to start 2020 in style – you know the saying – all roads lead to Rome.</p>
                 <p id="show1">See more</p>
@@ -57,7 +54,7 @@
 
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-amber">
-                <img src="/images/eiffel.jpeg" style="width:100%">
+                <img src="/eiffel.jpeg" style="width:100%">
                 <h2>Paris</h2>
                 <p id="paris1">Voulez-vous voyager avec nous? The city of love (or lights, whichever works for you) is waiting for you.</p>
                 <p id="show2">See more</p>
@@ -73,7 +70,7 @@
     <div class="w3-row w3-container" style="margin:50px 0">
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-orange">
-                <img src="/images/hop.jpeg" style="width:100%">
+                <img src="/hop.jpeg" style="width:100%">
                 <h2>London</h2>
                 <p id="london1">Ready for some 5 o’clock tea? Or 5 AM shot of coffee to push you to keep partying your way into the New Year?</p>
                 <p id="show3">See more</p>
@@ -88,7 +85,7 @@
 
         <div class="w3-half w3-container">
             <div class="w3-topbar w3-border-orange">
-                <img src="/images/redsquare.jpg" style="width:100%">
+                <img src="/redsquare.jpg" style="width:100%">
                 <h2>Moscow</h2>
 
                 <p id="moscow1">Yes, we do know it’s kind of cold in Moscow now, but you can do what the locals do in order to warm themselves up – drink loads of vodka. </p>
@@ -103,6 +100,7 @@
         </div>
     </div>
     <a href="/book">Other page</a>
+    -->
 
     <script>
         $(document).ready(function() {
