--- a/views/book.ejs
+++ b/views/book.ejs
@@ -31,62 +31,62 @@
             <% }); %>
     </div>
 
-    
-    <%- JSON.stringify(locations) %>
+
+    <!-- <%- JSON.stringify(locations) %> -->
 
 
 
-        <!-- Book -->
-        <div class="w3-container">
-            <h2>Fill in your info below to book this trip</h2>
+    <!-- Book -->
+    <div class="w3-container">
+        <h2>Fill in your info below to book this trip</h2>
 
-            <input class="w3-input w3-padding-16 w3-border" id="fullName" type="text" placeholder="Name" required name="Name">
-            <p id="checkName"></p>
-            <input class="w3-input w3-padding-16 w3-border" id="email" type="text" placeholder="Email" required name="Email">
-            <p id="checkEmail"></p>
-            <input class="w3-input w3-padding-16 w3-border" id="robo" type="text" placeholder="2000 + 20 = " required name="robo">
-            <p id="checkRobo"></p>
-            <p><button class="w3-button w3-black w3-padding-large" type="submit" onclick="checkForm()">BOOK</button></p>
-            <p id="success"></p>
-        </div>
-
-
-        </div>
+        <input class="w3-input w3-padding-16 w3-border" id="fullName" type="text" placeholder="Name" required name="Name">
+        <p id="checkName"></p>
+        <input class="w3-input w3-padding-16 w3-border" id="email" type="text" placeholder="Email" required name="Email">
+        <p id="checkEmail"></p>
+        <input class="w3-input w3-padding-16 w3-border" id="robo" type="text" placeholder="2000 + 20 = " required name="robo">
+        <p id="checkRobo"></p>
+        <p><button class="w3-button w3-black w3-padding-large" type="submit" onclick="checkForm()">BOOK</button></p>
+        <p id="success"></p>
+    </div>
 
 
+    </div>
 
-        <script>
-            function checkForm() {
-                x = document.getElementById("fullName").value;
-                if (x == "") {
-                    document.getElementById("checkName").innerHTML = "The field must not be empty"
-                } else if (/\s+/.test(x)) {
-                    document.getElementById("checkName").innerHTML = "Input correct"
-                } else {
-                    document.getElementById("checkName").innerHTML = "You need to enter your first name and the last name"
-                }
 
-                y = document.getElementById("email").value;
-                testY = (/@/.test(y));
 
-                if (testY == false) {
-                    document.getElementById("checkEmail").innerHTML = "The email address is invalid"
-                } else if (testY == true) {
-                    document.getElementById("checkEmail").innerHTML = "Email address correct!"
-                }
-
-                z = document.getElementById("robo").value;
-                if (z == 2020) {
-                    document.getElementById("checkRobo").innerHTML = "Thanks for verifying."
-                } else {
-                    document.getElementById("checkRobo").innerHTML = "Try again."
-                }
-
-                if (/\s+/.test(x) && testY == true && z == 2020) {
-                    document.getElementById("success").innerHTML = "Successfull registration"
-                }
+    <script>
+        function checkForm() {
+            x = document.getElementById("fullName").value;
+            if (x == "") {
+                document.getElementById("checkName").innerHTML = "The field must not be empty"
+            } else if (/\s+/.test(x)) {
+                document.getElementById("checkName").innerHTML = "Input correct"
+            } else {
+                document.getElementById("checkName").innerHTML = "You need to enter your first name and the last name"
             }
-        </script>
+
+            y = document.getElementById("email").value;
+            testY = (/@/.test(y));
+
+            if (testY == false) {
+                document.getElementById("checkEmail").innerHTML = "The email address is invalid"
+            } else if (testY == true) {
+                document.getElementById("checkEmail").innerHTML = "Email address correct!"
+            }
+
+            z = document.getElementById("robo").value;
+            if (z == 2020) {
+                document.getElementById("checkRobo").innerHTML = "Thanks for verifying."
+            } else {
+                document.getElementById("checkRobo").innerHTML = "Try again."
+            }
+
+            if (/\s+/.test(x) && testY == true && z == 2020) {
+                document.getElementById("success").innerHTML = "Successfull registration"
+            }
+        }
+    </script>
 
 
 </body>
