--- a/views/index.ejs
+++ b/views/index.ejs
@@ -169,7 +169,7 @@
 
 
         function book1() {
-            window.location.replace("/book")
+            window.location.replace("/book/1")
         }
     </script>
 
