--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,6 @@
                     why not visit a completely different country – it’s only a couple of metro stops away, you know? We’re talking about the Vatican, of course, where you can see St. Peter’s Basilica and the Sistine Chapel.
                 </p>
                 <p><button class="w3-button w3-black w3-padding-large" onclick="book1()" type="submit">BOOK</button></p>
-                <p id="success"></p>
                 <p id="hide1" style="display: none">See less</p>
             </div>
         </div>
@@ -60,8 +59,8 @@
                 <p id="show2">See more</p>
                 <p id="paris2" style="display:none">There is no better place for couples to start 2020 than by walking down the Champs-Elysées, climbing all the way to the top of the Eiffel Tower and warm up in one of the numerous cafes in the Latin Quarter. Bonus – all the amazing museums
                     from Louvre to Pompidou where you can really boost your general knowledge and get those culture Insta points. While there, you can take a trip to Versailles and see how the royals used to live.
-
                 </p>
+                <p><button class="w3-button w3-black w3-padding-large" onclick="book2()" type="submit">BOOK</button></p>
                 <p id="hide2" style="display: none">See less</p>
             </div>
         </div>
@@ -77,8 +76,8 @@
                 <p id="london2" style="display:none">You might have done it before, but this might be one last massively spectacular pre-Brexit party that London is going to host. Be there an get New Year’s Eve partying done! While you’re not watching the amazing fireworks display around
                     the London Eye and setting your watch to match the banging of Big Ben, you can roam around the city and check out some of the unmissable locations, like the Tower of London, Tower Bridge, Camden Town and Madame Tussauds. Get this trip
                     booked! Now!
-
                 </p>
+                <p><button class="w3-button w3-black w3-padding-large" onclick="book3()" type="submit">BOOK</button></p>
                 <p id="hide3" style="display: none">See less</p>
             </div>
         </div>
@@ -93,8 +92,8 @@
                 <p id="moscow2" style="display:none">It’s not only vodka (or Putin) that makes Moscow special. If you’re looking for the real wintery, snowy atmosphere, where warm clothes, mittens and warm (or alcoholic drinks) will keep you going and you want to see some of the world’s
                     most amazing architecture, this is the place for you. From Red Square and St. Basil’s Cathedral to Lenin’s Mausoleum, Moscow really offers you numerous ways to experience the culture that goes far beyond the clichés seen in American
                     films. Bonus – Moscow is still preparing for Christmas, which is in the beginning of January per their calendar, so you get to relive Christmas time.
-
                 </p>
+                <p><button class="w3-button w3-black w3-padding-large" onclick="book4()" type="submit">BOOK</button></p>
                 <p id="hide4" style="display: none">See less</p>
             </div>
         </div>
@@ -170,6 +169,18 @@
 
         function book1() {
             window.location.replace("/book/1")
+        }
+
+        function book2() {
+            window.location.replace("/book/2")
+        }
+
+        function book3() {
+            window.location.replace("/book/3")
+        }
+
+        function book4() {
+            window.location.replace("/book/4")
         }
     </script>
 
