Controls to be added to form

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -75,33 +75,56 @@ It is in the compelling zest of high adventure and of victory, and in creative a
 <div class="w3-container w3-padding-64" id="contact">
     <div class="w3-row-padding w3-center w3-padding-16" id="pricing">
             <h2>Any Questions?</h2>
-            <p>Sit back and relax, we will contact you in the next 24 hours.</p><br>
+            <p>We respond to all requests within 24 hours.</p><br>
     </div>
   <div class="w3-row">
     <div class="w3-col m5">
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
-      <h3>Address</h3>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Details</span></div>
       <p>Swing by for a cup of coffee or just say hi!</p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>&nbsp;&nbsp;Mayor Street Lower, International Financial Services Centre, Dublin</p>
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>&nbsp;&nbsp;+00 1515151515</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>&nbsp;&nbsp;bonvoyage@bonvoyage.com</p>
+      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>&nbsp;&nbsp;+353 87 654 3210</p>
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>&nbsp;&nbsp;contact@bonvoyage.com</p>
+      <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Opening Hours</span></div>
+    <p>Monday: 9am - 6pm</p>
+    <p>Tuesday: 9am - 6pm</p>
+    <p>Wednesday: 9am - 6pm</p>
+    <p>Thursday: 9am - 7pm</p>
+    <p>Friday: 9am - 6pm</p>
+    <p>Saturday: 10am - 5pm</p>
+    <p>Closed on Sundays and Bank Holidays</p>
     </div>
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
       <div class="w3-section">      
-        <label>Name</label>
-        <input class="w3-input" type="text" name="Name" required>
+        <label>First Name*</label>
+        <input class="w3-input" type="text" name="fName" required>
       </div>
       <div class="w3-section">      
-        <label>Email</label>
+            <label>Last Name*</label>
+            <input class="w3-input" type="text" name="lName" required>
+      </div>
+      <div class="w3-section">      
+        <label>Email*</label>
         <input class="w3-input" type="text" name="Email" required>
       </div>
       <div class="w3-section">      
-        <label>Message</label>
+            <label>Confirm Email*</label>
+            <input class="w3-input" type="text" name="checkEmail" required>
+      </div>
+      <div class="w3-section">      
+            <label>Phone Number (optional)</label>
+            <input class="w3-input" type="text" name="Phone">
+      </div>
+      <div class="w3-section">      
+            <label>Subject*</label>
+            <input class="w3-input" type="text" name="Subject" required>
+      </div>
+      <div class="w3-section">      
+        <label>Message*</label>
         <input class="w3-input" type="text" name="Message" required>
       </div>  
-      <input class="w3-check" type="checkbox" checked name="Like">
-      <label>I Like it!</label>
+      <input class="w3-check" type="checkbox" checked name="Newsletter">
+      <label>Subscribe to Bon Voyage! newsletter</label>
       <button type="submit" class="w3-button w3-right w3-theme">Send</button>
       </form>
     </div>
