--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,28 +1,6 @@
 <% include ../partials/header %>
-
-
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="contact.js"></script>
-<body id="contact">
-
-<!-- Navbar -->
-<div class="w3-top">
-<div class="w3-bar w3-theme-d2 w3-left-align">
-  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Bon Voyage!</a>
-  <a href="book" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Plan Your Trip</a>
-  <a href="comments" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Testimonials</a>
-  <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Get In Touch</a>
-</div>
-</div>
-
+<body>
+    
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity">
   <img src="beach.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
