--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/app.css" type="text/css">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <a href="/">Home</a>
-        <a href="book">Book</a>
-        <a href="comments">Comments</a>
-        <a href="contact">Contact</a>
-      </div>
+<html>
+<title>WAD Project</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="app.css" type="text/css">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="contact.js"></script>
+
+<!-- Navbar -->
+<div class="w3-top">
+<div class="w3-bar w3-theme-d2 w3-left-align">
+  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+  <a href="/" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Bon Voyage!</a>
+  <a href="book" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Plan Your Trip</a>
+  <a href="comments" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Testimonials</a>
+  <a href="contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Get In Touch</a>
+</div>
+</div>
+
